<resources>
    <string name="app_name">SList</string>
    <string name="plus_fab_button_desc">Button to Add itens</string>
    <string name="default_group_name">Something goes wrong?</string>
    <string name="new_group_name">Name</string>
    <string name="new_group_name_desc">* Write the group name</string>
    <string name="new_group_name_hint">Group Name</string>
    <string name="new_group_image">Image</string>
    <string name="new_group_image_desc">Select the group image cover</string>
    <string name="new_group_save">Save</string>
    <string name="new_group_image_button">Choose Image</string>
    <string name="new_group_close_modal_button">close modal button</string>
    <string name="config_new_group_name">Config new group name</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete">Delete</string>
    <string name="close_modal">Close modal</string>
    <string name="save">SAVE</string>
    <string name="save_group_name">Save group name</string>
    <string name="updated">Updated:</string>
    <string name="description_goes_here">Description goes here</string>
    <string name="created">Created:</string>
    <string name="item_name">Item Name</string>
    <string name="decrement">Decrement</string>
    <string name="_0_template">0</string>
    <string name="increment">Increment</string>
    <string name="cover_image">cover image</string>
    <string name="gear_icon">Gear Icon</string>
    <string name="write_the_item_description">Write the item description</string>
    <string name="description">Description</string>
    <string name="write_the_item_name">* Write the item name</string>
    <string name="new_group_name_hint_2">New Group Name</string>
    <string name="clone_new_group_modal">clone new group modal</string>
    <string name="button_to_set_image_to_new_group">button to set image to new group</string>
    <string name="click_to_export_you_data_to_you_device">Click to export you data to you device</string>
    <string name="export">Export</string>
    <string name="_import">Import</string>
    <string name="click_to_import_the_data_to_you_device">Click to import the data to you device</string>
    <string name="close_export_import_modal">close export/ import modal</string>
    <string name="you_will_be_able_to_delete_items">You will be able to delete items</string>
    <string name="delete_mode">Delete Mode</string>
    <string name="value_down">Value Down</string>
    <string name="value_up">Value Up</string>
    <string name="value">Value :</string>
    <string name="name_down">Name Down</string>
    <string name="name_up">Name Up</string>
    <string name="name">Name :</string>
    <string name="order_the_items_by">Order the items by :</string>
    <string name="order">Order</string>
    <string name="close_list_modal">close list modal</string>
    <string name="close_new_item_modal">close new item modal</string>
    <string name="add_element">add element button</string>
    <string name="open_modal_burger">open modal burger</string>
</resources>