<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_corner_background"
    android:elevation="4dp"
    android:paddingLeft="8dp"
    android:paddingTop="16dp"
    android:paddingRight="8dp"
    android:paddingBottom="16dp">

    <!-- Container for Main Text and Buttons -->
    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Trash Button (Initially Hidden) -->
        <ImageButton
            android:id="@+id/btn_trash"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_negate"
            android:contentDescription="@string/delete"
            android:padding="10dp"
            android:src="@drawable/ic_trash"
            android:visibility="gone" />

        <!-- Main Text Area -->
        <TextView
            android:id="@+id/item_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Minus Button -->
        <ImageButton
            android:id="@+id/btn_decrement"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/decrement"
            android:padding="10dp"
            android:src="@drawable/ic_minus" />

        <!-- EditText for Number -->
        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="0"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="@string/_0_template"
            android:inputType="number"
            android:maxLength="4"
            android:text="@string/_0_template" />

        <!-- Plus Button -->
        <ImageButton
            android:id="@+id/btn_increment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/increment"
            android:padding="10dp"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <!-- Bottom Box (Initially Hidden) -->
    <LinearLayout
        android:id="@+id/bottom_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_section"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <!-- Description Text -->
        <TextView
            android:id="@+id/item_created_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_updated_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updated"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/description_goes_here"
            android:textSize="14sp" />

        <!-- Creation and Update Info -->
    </LinearLayout>

</RelativeLayout>